Forgot to commit changes that added actual .sectionBlocks class

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,11 @@ font-weight: bolder;
 color: black;
 }
 
+.sectionBlocks {
+line-height: height 50px;
+margin-top:10px;
+margin-bottom:10px
+}
 
 h3 
 { 
