--- a/css/style.css
+++ b/css/style.css
@@ -32,25 +32,39 @@ h3
 }
 
 .nav {
-  background-color: #333;
-  overflow: hidden;
+  height: 100%;
+  width: 200px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  padding-top: 20px;
 }
 
 .nav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
+  padding: 6px 6px 6px 32px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 25px;
+  color: #818181;
+  display: block;
 }
 
 .nav a:hover {
-  background-color: #ddd;
-  color: black;
+  color: #f1f1f1;
 }
 
 .nav a.active {
   background-color: #4CAF50;
   color: white;
+}
+
+.main {
+  margin-left: 200px; /* Same as the width of the sidenav */
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
 }
