--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,16 @@
+/*This is the base background color, will be updated to be a better theme later */
 body {
   background-color: rgb(182, 210, 214);
 }
 
-h1 {
-  color: blue;
-}
-
+/* this is the base paragraph style */
 p {
   color: black;
   margin-top:0;
   margin-bottom:0;
 }
 
+/* This class is used for custom headings, mostly with resume page to highlight sections */
 .customHeading {
 margin-top: 0;
 margin-bottom: 0;
@@ -19,18 +18,15 @@ font-weight: bolder;
 color: black;
 }
 
+/* This class is used for div tags for spacing purposes, close enough to be related to text
+but far enough to be related */
 .sectionBlocks {
 line-height: height 50px;
 margin-top:10px;
 margin-bottom:10px
 }
 
-h3 
-{ 
-  padding: 5px;
-  margin: -15px;
-}
-
+/* this class is used with the div tag to create a menu for the website on each page */
 .nav {
   height: 100%;
   width: 200px;
@@ -43,6 +39,7 @@ h3
   padding-top: 20px;
 }
 
+/* This class is used for the menu on each page with the div element*/
 .nav a {
   padding: 6px 6px 6px 32px;
   text-decoration: none;
@@ -51,20 +48,19 @@ h3
   display: block;
 }
 
+/* This class targets hover behavior for menu with div element */
 .nav a:hover {
   color: #f1f1f1;
 }
 
+/* this class targets behavior for active tab on the menu with div element */
 .nav a.active {
   background-color: #4CAF50;
   color: white;
 }
 
-.main {
-  margin-left: 200px; /* Same as the width of the sidenav */
-}
-
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
+/* this class is used with div elements to adjust margins spacing so that menu options
+do not overwrite/head main text */
+.moveright {
+  margin-left: 200px;
 }
